<resources>
    <string name="app_name">MoodleUI</string>
    <string name="view_pager_description">This is viewpager</string>

    <string name="u_s_t_h_moodle">USTH Moodle</string>

    <string name="notifications_head">Notifications</string>
    <string name="notifications_text">There are no notifications</string>
    <string name="site_blog_head">Site blog</string>
    <string name="site_blog_text">No visible entries here</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course_categories">Courses Categories\n</string>
    <string name="my_courses">My courses</string>
    <string name="course_name">Course Name</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="filter_my_courses">Filter my courses</string>
    <string name="more_options">More Options</string>
    <string name="in_progress">In Progress</string>
    <string name="course_overview">Course Overview</string>
    <string name="sorting_subjects">Sorting Subjects</string>
    <string name="grid_four">Grid Four</string>
    <string name="introduction_to_algorithms">Intro to Algorithms</string>
    <string name="_114_s2_ict1_004_introduction_to_algorithms">[114-S2] ICT1.004 Introduction to algorithms</string>
    <string name="genetics_bi13_ba12"> Genetics BI13-BA12 </string>
    <string name="mobile_wireless_bi13_ba12">Mobile Wireless</string>
    <string name="operating_systems">Operating Systems</string>
    <string name="recently_accessed_courses">Recently accessed courses</string>
    <string name="right_button">Right Button</string>
    <string name="left_button">Left Button</string>
    <string name="all_including_removed">All (including removed from view)</string>
    <string name="all">All</string>
    <string name="future">Future</string>
    <string name="past">Past</string>
    <string name="starred">Starred</string>
    <string name="remove_from_view">Removed from view</string>
    <string name="removed_from_view">Removed from view\n</string>
    <string name="first_name">First Name</string>
    <string name="user_role">Your Role\n</string>
    <string name="phone">Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="MAD">Mobile Application Development</string>
</resources>